--- a/caseStudyWP/05-chap5.Rmd
+++ b/caseStudyWP/05-chap5.Rmd
@@ -215,8 +215,7 @@ Download diagnostic info for checking
 
 Table: (\#tab:logistic-diag-chum) Model diagnostic statistics from logistic regression LRP using percentile benchmarks. A description of diagnostic tests is provided in Section 2. Hit ratios are shown for p=0.5.  
 
-Several factors led to these poor model fits. The Inside South Coast Chum SMU is made up of seven CUs that vary in their escapement abundance. In many years, escapement in Georgia Strait and Howe Sound-Burrard Inlet is greater than in other CUs by two orders of magnitude (Fig. \@ref(fig:chum-spawner-distribution)). In addition, the correlation in escapement among these seven CUs is low (Fig. \@ref(fig:chum-spawner-corr)). These characteristics mean that the aggregate abundance may be high due to one or more CUs with high escapements, while one more smaller CUs are below their benchmark. High aggregate escapements do not mean that all CUs are above their benchmark. This makes sense because this SMU covers a large area with many different populations affected by both local and regional factors. These seven CUs also have different numbers of populations. There are also differences in actual productivity (recruits per spawner) among CUs. 
-<!--CH: I suggest applying the 4 criteria for 'representativness' in the Guidelines paper to assess if it is reasonable to assess status of the SMU based on only 4 or 5. I can help you with the biogeoclimatic zones. I suggest emailing Pieter about similarity in threats among CUS-->
+Several factors led to these poor model fits. The Inside South Coast Chum SMU is made up of seven CUs that vary in their escapement abundance. In many years, escapement in Georgia Strait and Howe Sound-Burrard Inlet is greater than in other CUs by two orders of magnitude (Fig. \@ref(fig:chum-spawner-distribution)). In addition, the correlation in escapement among these seven CUs is low (Fig. \@ref(fig:chum-spawner-corr)). These characteristics mean that the aggregate abundance may be high due to one or more CUs with high escapements, while one more smaller CUs are below their benchmark. High aggregate escapements do not mean that all CUs are above their benchmark. This makes sense because this SMU covers a large area with many different populations affected by both local and regional factors, as described at the beginning of this case study. These seven CUs also have different numbers of populations. 
 
 ```{r chum-spawner-corr, fig.cap="Pairwise correlations of spawner abundance between Inside South Coast Chum Conservation Units.", warning=FALSE, echo=FALSE, fig.align="center"}
 #if(!file.exists('figure/chum-spawners-corr.png')) download.file('https://github.com/Pacific-salmon-assess/SalmonLRP_RetroEval/raw/master/SCChumStudy/Figures/fig_chum_spawners_corr.png', './figure/chum-spawners-corr.png', mode="wb")
@@ -227,13 +226,11 @@ knitr::include_graphics('figure/chum-spawners-corr.png')
 
 ## HISTORICAL EVALUATION OF STATUS ACROSS LRP METHODS
 
+The ISC-NF Chum SMU was consistently below the LRP for large portions of the historical time series, regardless of which LRP estimation method  (Figure \@ref(fig:chum-LRP-compare). While the aggregate abundance of the SMU increased over time, SMU status remained below the LRP in every year of the past two decades except 2004 for all estimation methods. These results were mainly due to the tendency of Georgia Strait and Burrard Inlet-Howe Sound CUs to have high and increasing abundances while smaller CUs, such as Southern Coastal Streams, remained low.
 
-<!--KH: you could start off this section with a blanket statement along the lines of:
-The ISC-NF Chum SMU was consistently below the LRP for large portions of the historical time series, regardless of which LRP estimation method. While the aggregate SMU abundance time series increased over time, SMU status remained below the LRP in every year of the past two decades except 20xx for all estimation methods. These results were mainly due to the tendency of Georgia Strait and Burrard Inlet-Howe Sound CUs to have high and increasing abundances while smaller CUs, such as Southern Coastal Streams, remained low.-->
+When using the same data, LRP status based on percentile benchmarks and the Salmon Scanner were identical (Figure \@ref(fig:chum-LRP-compare)). This can be seeen by comparing Scenarios 1 and 3, and comparing Scenarios 2 and 6 (same data, more data than 1 and 3). This is because, when no abundance benchmark is used, the Salmon Scanner tool relies on trends and absolute abundance threshold of 1500 fish (Fig. \@ref(fig:decision-tree). 
 
-LRP status based on percentile benchmarks had more years below the LRP <!-- than LRP status based on the Salmon Scanner--> Salmon Scanner status (Figure \@ref(fig:chum-LRP-compare), Table \@ref(tab:LRP-scenarios)). Comparing scenarios 1 and 3 (same data) in a given year, ISC Chum were below the LRP based on percentile benchmarks but above it based on decision tree. Scenarios 2 and 6 (same data, more data than 1 and 3) show a similar pattern. <!-- KH: Can you describe why this is? When the Salmon Scannergets applied to 4CUs full, do all CUs in all years use the percentile criteria?  If so, I would expect them to be the same.  Or, are there some years where the mutidim uses trends for the 4 CUs full? -->  <!--CH: the same for scenario 2 and 6 (5 CUs partial). If they use the same percentile data for those 5 CUs, they should get the same result unless an absolute threshold is breached and a different branch of the tree is used in the Rapid Multidimentaional Scanner Tool? If so, it would be useful describing this explicitly--> <!--CH: is there a difference in raw vs smoothed values used in our percentile assessment vs. the SOS Scanner Tool (we should use gen averages), or in the estimation of percentile-based benchmarks (I see we have used raw values, which I think makes sense and is consistent with Holt et al. 2018, p.9)-->
-
-In this case study, adding more data changed the number of years that the SMU was below the LRP. Scenario 5 (most data) had the most years below the LRP. Comparing scenarios 1 and 2, which are both based on percentile benchmarks, including more data (scenario 2) results in more years below the LRP. Comparing scenarios 4 and 5 (decision tree only), including more observations results in one year switching from above the LRP to below it.<!--CH: Actually, I think it switched from having no data for that year to below thte LRP when more data were included--> Comparing scenarios 5 and 6 (where scenario 6 had two fewer CUs than scenario 5), including the two CUs in scenario 5 results in three years switching from above the LRP to below <!--CH: again this is switching from no data to below LRP, correct?-->. Other applications may result in different outcomes of including more data based on the status of additional CUs or years. <!--CH. It's not clear what "other applications" means here. I suggest omitting the last sentence, and then in the discussion mentioning the role of adding data--> 
+In this case study, adding more data changed the number of years that the SMU was below the LRP. Scenario 5 (most data) had the most years below the LRP, with every year after the first being below the LRP. Comparing Scenarios 1 and 2, which are both based on percentile benchmarks, including more data (Scenario 2) results in more years below the LRP. Comparing scenarios 4 and 5 (Salmon Scanner), including more observations results in one year switching from above the LRP to below it, with the addition of data from CUs with partial time series. Comparing scenarios 5 and 6 (where Scenario 6 had two fewer CUs than Scenario 5), including the two CUs in scenario 5 results in three years switching from above the LRP to below, as the two CUs without percentile benchmarks are added.
 
 We found that SMU status can be below the LRP even if the aggregate abundance increases. For ISC Chum, this is mainly due to years with high abundances of Georgia Strait and Burrard Inlet-Howe Sound and low abundances and red status in other, smaller CUs, such as Southern Coastal Streams. This highlights the importance of including a metrics of status at the CU level, which influence the overall SMU status.  
 
