added comment to ch4 of Case study paper

--- a/caseStudyWP/04-chap4.Rmd
+++ b/caseStudyWP/04-chap4.Rmd
@@ -669,3 +669,7 @@ A few key conclusions from this case study are highlighted for broader relevance
 In the development of projection-based LRPs, inlets were chosen as the spatial scale of biodiversity required for the sustainability for the SMU. In future analyses, alternative assumptions could be considered, including LRPs derived to maintain diversity at the CU scale by projecting CU-level abundances.  Furthermore, future iterations of the multidimensional status assessment approach could include information on the distribution of spawners across sites within CUs or inlets to incorporate additional scales of diversity.  <!--CH: add consideration of alternative forms of stock-recruitment relationship and peer review as to if a SR is even relevant for these inlets/CUs of CK-->
 
 In addition, if projection-based LRPs are considered for this SMU, further work exploring their sensitivity to directional biases in productivity and capacity is warranted.
+
+<!--CH: Add hatcheries as a key uncertainty here. We could actually remove ppn hatchery from 6 of 11 indicator stocks for abundances in the most recent estimate of spawners to compare against habitat based benchmarks for most of our indicator stocks. However, the most recent data I received from Jessy Jan 2021, had PNI estimates that ended in 2017 or 2018, so actually not very current. Also, because we can't remove it for all of them our aggregate abundances would be based on totals, so perhaps a disconnect between CU level status and aggregate-abundances if used to logistic regression. Also, status already below LRP, so reducing abundances wouldn't change management decision on this Q. 
+Mike Bradford mentioned that Q of what to do with stocks between PNI 0.5-0.72 is really a policy decision. Do we use all abundances or not? We should mention this; it's not just a question about uncertainty. 
+Add note that could do a sensitivity analysis removing Artlish as this is borderline, PNI values 0.46 (included based on expert opinion). Actually leave this note out fornow and mention if Q arises.-->
