--- a/guidelinesWP/06-chap6.Rmd
+++ b/guidelinesWP/06-chap6.Rmd
@@ -10,20 +10,25 @@ Observations errors in spawner abundances, catches, stock assignment of catches,
 
 The impact of hatchery enhancement on spawner and recruitment time-series is a key uncertainty due to the low rates of marking among hatcheries. Even when data on the proportion of hatchery-origin fish are available and abundance time-series are adjusted to account for these (as in the Interior Fraser River Coho case study), the genetic impacts of hatchery enhancement can perpetuate over multiple generations [@arakiCarryoverEffectCaptive2009; @christieReproductiveSuccessEarlygeneration2014], but are difficult to quantify because second generation hatchery-origin fish are not marked or monitored. This is a source of uncertainty for populations impacted by within-basin hatchery facilities and those impacted by straying out-of-basin. Targeted marking and monitoring of spawning grounds for mark proportions and genetic analyses to identify genetic retrogression from strays would help address these uncertainties.  
 
+Further, for stocks that are not dominated by hatchery production, the decision to exclude the contribution of hatchery-origin fish from time-series of spawner abundances where possible assumes that these fish do not contribute to assessment and resulting management of wild salmon, as in previous WSP assessments (e.g., @dfoWildSalmonPolicy2015), despite their possible contribution to conservation and rebuilding objectives, and ecosystem services in general. A review and evaluation of objectives of integrated-transition and integrated-wild populations (with PNI  $\geqslant$ 0.5), and the appropriate data on which to base assessments was beyond the scope of this project. 
+
 For benchmarks estimated from spawner-recruitment relationships, observation errors in the independent variable, spawner abundances can bias parameter estimates (errors-in-variables), as can correlations that occur when spawner abundances in a given year depend on recruitment in the previous generation (time-series biases) [@waltersFisheriesEcologyManagement2004].
 
-Structural uncertainty in SR Model- others can be considered single vs hier, BH, hockey stock, with depensation. We've demonstrated how you can account for that type of uncertainty.
+Structural uncertainty in stock-recruitment models underlying benchmark estimation can swamp other sources of uncertainty, and requires careful consideration based on available data and biological understanding of the population dynamics, ideally with peer review.  We provided one example of structural uncertainty in the Interior Fraser River Coho study based on prior assumptions about population capacity, but other components, such as decisions about depensation at low abundances, shared or independent variability in productivity among CUs, and Beverton-Holt versus Ricker forms should be considered.  
 
-Uncertainty in percentile method because of unertainties in estimates of prod and hr to correctly classify them in framework described in Holt et al. 2018.
+Uncertainties in percentile-based benchmarks can be calculated from bootstrapped confidence intervals of benchmarks accounting for autocorrelation in spawner abundances [@peacockEvaluatingConsequencesCommon2020; @holtEvaluatingBenchmarksBiological2018]. <!--CH Comment: I don't think we actually did this, but could have. Do you think it's okay to leave as is?. It would be great to get bootstrapped uncertainties in overall status by drawing from bootstrapped benchmarks and comparing against current spawner abundances. Then instead of getting a single trigger, we'd get a probability distribution that we're below the trigger. I guess we could mention this a future recommendation below...-->. Uncertainties in their implementation can arise because of uncertainties in estimates of productivity and harvest rates that are used to categorize populations to identify appropriate percentiles to use [@holtEvaluatingBenchmarksBiological2018]. 
 
-Uncertainty in habitat-based benchmarks, due to assumptions about productivity, meta-ansysls for stocks based on SR data that is outdated and uses a wide range of stocks that might not represent the conditions locally. <!--CH: also uncertainties about priors in the hierarchical analsysis, but this is perhaps too much deatil for now, and will leave to appendix that describes that model-->
+Uncertainty in habitat-based benchmarks, due to assumptions about productivity, meta-analyse for stocks based on SR data that is outdated and uses a wide range of stocks that might not represent the conditions locally. <!--CH: also uncertainties about priors in the hierarchical analysis, but this is perhaps too much detail for now, and will leave to appendix that describes that model-->
 
 
 Uncertainty in spatial scale- sens on different scales? 
 
 Uncertainty in identification of CUs
 
-- expert drive process accounts for uncertainty in underlying data an reliability of SR based benchmarks (see narratives in dfoWildSalmonPolicy2015 for IFR coho). Would also be includes in peer-reveiw of Rapid Multidimensional Scanning Tool statuses
+Uncertinaty in formal WSP assessment: not repeatable, depends on experts presnet, which preusambly covers all relevant expertise. Note, this expert driven process accounts for uncertainty in underlying data an reliability of SR based benchmarks (see narratives in dfoWildSalmonPolicy2015 for IFR coho). 
+
+Uncertainty in Scanning Tool, doesn't fit every case perfectly and doesn't capture all metrics well (e.g., productivty and distributin). Would also be includes in peer-reveiw to cpature these descrepancies. Tool will evolve as applied to more stocks. (aligned with part of principles 2 on best avialble infomation)
+
 
 ### Proportion-based RLPs
 - describe uncertainties arising from missing limited CU-level data. (maybe not representative) 
@@ -51,7 +56,7 @@ e.g.,
 Principle 7: Consider whether reference points or indicators should be changed.
 Principle 8: Clearly communicate advice on stock status and reference points.- 
 
-As a way to adddress uncertainty in approaches (paradigms for developing LRPs), if LRP estimates align when derived using different approaches, this increases support for that value.
+As a way to address uncertainty in approaches (paradigms for developing LRPs), if LRP estimates align when derived using different approaches, this increases support for that value.
 
 
 <!--from CS paper-->
