comments on guidelines

--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -29,9 +29,13 @@ CH: I think we should keep benchmarks as biological values as defined in the WSP
 
 LRPs are commonly used in the assessment and management for marine fisheries where they are used to identify and communicate statuses and inform harvest control rules. Reviews of the application of reference points and harvest control rules can be found in @kvamsdalHarvestControlRules2016 and @puntHarvestControlRules2010. @dowlingEmpiricalHarvestStrategies2015 reviewed the use of harvest control rules and management procedures in data-poor fisheries. In Canada, @sheltonLimitsOverfishingReference2002 provided an overview of the implementation of the precautionary approach and LRPs before the publication of DFO's Precautionary Approach Framework in 2009. They highlight that, at that point in time, there was limited evidence of the implementation of the precautionary approach in Canadian fisheries. In contrast, 12 years after the publication of DFO's Precautionary Approach Framework, a review by @marentetteSpecificationPrecautionaryApproach2021 showed that the principles of the Framework, including the adoption of LRPs, are now widespread in the management of Canadian stocks. This review was based on a survey of 177 Canadian stocks of cultural, economic and/or environmental importance, excluding salmonids and transboundary stocks. They identified that 102 stocks had adopted LRPs, although the method used to estimate the LRPs varied considerably among stocks. @kronlundConsiderationsDesignRebuilding2021 also reviewed the use and definition of LRPs in the context of Canadian and international policy. They highlight the importance of embedding LRPs into management objectives with associated tolerance (probability) statements, e.g., "stock status should be maintained above the LRP 90% of the time", as the tolerance statement is required to render the LRP operational. Diagnosing where serious harm is occurring is a pervasive challenge when identifying LRPs, as is addressing the impacts of non-stationarity in underlying biological processes such as natural mortality [@kronlundConsiderationsDesignRebuilding2021].
 
-Less frequently, multidimensional approaches that aggregate status over numerous biological characteristics have been applied to indicate serious harm to marine fish species. These approaches are particularly relevant when traditional abundance-based metrics are not estimable or not applicable or when data availability is limited [@dowlingEmpiricalHarvestStrategies2015]. Multidimensional approaches allow for consideration of multiple data sources often including expert knowledge to integrate conflicting metrics within assessments. For example, multidimensional reference points have been applied to Snow Crab in Canada, where data on CPUE, egg clutches and discards are integrated in stock assessments [@mullowneyBasisPrecautionaryApproach2018].
+Less frequently, multidimensional approaches that aggregate status over numerous biological characteristics have been applied to indicate serious harm to marine <!--remove:fish --> species. These approaches are particularly relevant when traditional abundance-based metrics are not estimable or not applicable or when data availability is limited [@dowlingEmpiricalHarvestStrategies2015]. Multidimensional approaches allow for consideration of multiple data sources often including expert knowledge to integrate conflicting metrics within assessments. For example, multidimensional reference points have been applied to Snow Crab in Canada, where data on CPUE, egg clutches and discards are integrated in stock assessments [@mullowneyBasisPrecautionaryApproach2018].
 
 <!-- CW: Maybe move the spatial scale general pgh from below here? 
+
+With some edits:
+Multidimnesional approaches can also be useful to address mismatches in scales among biological stocks, the unit of management, and the spatial scale of data collection. These are not uncommon among marine species, especially invertebrate species [@dfoProceedingsNationalPeer2016; @mullowneyBiologicalPerspectivesComplexities2020], creating challenges when identifying LRPs [@dfoScienceAdvicePrecautionary2021]. This mismatch can make undesirable states in fish populations difficult to detect, and weaken the effectiveness of resulting management measures. 
+
 
 -->
 
@@ -63,7 +67,7 @@ The Fish Stock provision pertain to the management of fisheries. For Pacific sal
 Alternative spatial scales of assessment and management are used by agencies outside of DFO for Pacific salmon, including Designatable Units used by COSEWIC and Management Units under the Pacific Salmon Treaty. These units are not aligned with the biological unit of conservation under DFO's WSP, CU, and are not considered further here.
 
 
-<!--CW: I am not sure this paragraph should be here, it reads more like a review -->
+<!--CW: I am not sure this paragraph should be here, it reads more like a review. I included it in a comment above.  -->
 A mismatch in scales among biological stocks, the unit of management, and the spatial scale of data collection are not uncommon among marine fish species, especially invertebrate species [@dfoProceedingsNationalPeer2016; @mullowneyBiologicalPerspectivesComplexities2020], creating challenges when identifying LRPs [@dfoScienceAdvicePrecautionary2021]. This mismatch can make undesirable states in fish populations difficult to detect, and weaken the effectiveness of resulting management measures. <!--CH: could include snow crab example from Mullowney et al. 2020 if we wanted to flush this out a bit. I couldn't find any reference for American Lobster- i.e., Adam Cook's ppt from TESA workshop-->
 
 ## Goals of Working Paper
@@ -74,8 +78,7 @@ The goals of this working paper were to:
 
 2. Document candidate methods for developing LRPs at the SMU-level, including data requirements and assumptions. (See Section \@ref(est-methods) and \@ref(app:first-appendix)). More details are provided in companion paper, Holt et al. (in review).
 
-3. Document key uncertainties that affect LRP estimates for each method considered, including 
-uncertainties arising from missing or limited CU-level data. (See Section \ref(recommendations))
+3. Document key uncertainties that affect LRP estimates for each method considered, including uncertainties arising from missing or limited CU-level data. (See Section \ref(recommendations))
 
 4. Provide guidance and recommendations on the application of candidate methods over a range of data types and availability. (See Section \@ref(guidelines))
 
@@ -84,7 +87,13 @@ Pacific salmon are unique among marine fish species because of their anadromous 
 
 ## Scope of Working Paper
 
-A companion Working Paper (Holt et al. in review) provides further details on candidate methods for developing LRPs and their implementation on three case studies. Our applications of LRP methods are for demonstration purposes only, and are not meant to be formal implementation of LRPs for those SMUs. While candidate LRPs were evaluated to an extent through sensitivity analyses and retrospective analyses, a more rigorous closed-loop simulation evaluation of candidate LRPs was beyond the scope of both working papers, and is recommended as a next step.
+<!--CW: suggest an opening sentece to the first paragraph in this section with what is in scope. Something Like:
+
+This paper provides guidelines to operationalize the use of the methods introduced in the comanion Working Paper (Holt et al. in review). This paper includes advice of when to apply a given LRP method based on data availability and management requirements.
+-->
+
+ 
+The companion Working Paper (Holt et al. in review) provides further details on candidate methods for developing LRPs and their implementation on three case studies. Our applications of LRP methods are for demonstration purposes only, and are not meant to be formal implementation of LRPs for those SMUs. While candidate LRPs were evaluated to an extent through sensitivity analyses and retrospective analyses, a more rigorous closed-loop simulation evaluation of candidate LRPs was beyond the scope of both working papers, and is recommended as a next step.
 
 The LRPs considered here focus on serious harm to the stock. We have not included metrics or benchmarks of the status of salmon habitat [@stalbergCanadaPolicyConservation2009] or the ecosystem as a whole, though future analyses could more capture a more thorough perception of the nature of serious harm to salmon that includes those dimensions.  
 
@@ -94,13 +103,13 @@ Time-varying population processes, such as changes in productivity, have importa
 
 While we follow the recommendation of @holtIndicatorsStatusBenchmarks2009a to assess status of CUs using multiple metrics, we have implemented this approach using a multidimensional algorithm, the Rapid Multidimensional Scanning Tool, documented in Pestal et al. (in prep), developed from the implementation of formal, peer-reviwed WSP assessments for Pacific salmon stocks in Canada. A full review of the Rapid Multidimensional Scanning Tool is beyond the scope of this paper.  Furthermore, a review of individual benchmarks of CU status is beyond the scope of this paper.
 
-Decisions about prioritizing CUs for conservation within an SMU (e.g., evaluating the costs and benefits of conserving individual CUs given differential vulnerability to climate change or other stressors) is also beyond our scope, requiring a broader discussion with managers and stakeholders.
+Decisions about prioritizing CUs for conservation within an SMU (e.g., evaluating the costs and benefits of conserving individual CUs given differential vulnerability to climate change or other stressors) is also beyond our scope, requiring a broader discussion with <!-- cwsugges: local experts,--> managers and stakeholders.
  
 
 
 ## Enhancement
 
-For many stocks, hatcheries contribute to spawning abundances and are used as a conservation tool and to increase the availability of fish for harvest. Hatchery enhancement can also reduce wild genetic diversity and is considered a risk factor for the long-term sustainability of CUs [@withlerGeneticallyBasedTargets2018]. Salmon that are enhanced by hatcheries are not considered "wild" under the Wild Salmon Policy and are not usually included in assessments of biological status. However separating out the influence of hatchery enhancement in time-series of spawner abundances and recruitment is challenging, in part because hatchery-origin fish are not usually visibly marked and so are indistinguishable from natural-origin spawners. 
+ Hatcheries contribute to spawning abundances of many salmon stocks and can be used as a conservation tool and to increase the availability of fish for harvest. Hatchery enhancement can also reduce wild genetic diversity and is considered a risk factor for the long-term sustainability of CUs [@withlerGeneticallyBasedTargets2018]. Salmon that are enhanced by hatcheries are not considered "wild" under the Wild Salmon Policy and are not usually included in assessments of biological status. However separating out the influence of hatchery enhancement in time-series of spawner abundances and recruitment is challenging, in part because hatchery-origin fish are not usually visibly marked and so are indistinguishable from natural-origin spawners. 
 
 
 Following @withlerGeneticallyBasedTargets2018, we recommend including only populations without significant enhancement in analyses of CU and SMU status. Proportionate Natural Influence, PNI, is a metric of the genetic risk of hatcheries on natural populations, with values < 0.5 indicating integrated-hatchery populations, where most fish are hatchery origin, values  $\geqslant$ 0.5 indicating integrated-transition where natural-origin fish predominate, and values $\geqslant$ 0.72 indicating integrated-wild populations, where most fish are considered 'wild' under the WSP with parents who were born in the natural environment [@withlerGeneticallyBasedTargets2018]. While these guidelines were developed for Chinook Salmon where hatchery enhancement is most common, they are also applicable to other salmon species [@withlerGeneticallyBasedTargets2018]. 
@@ -119,10 +128,12 @@ In addition, some populations without hatcheries may be influenced by straying f
 
 ## Role of LRPs {#roleLRPs}
 
-LRPs have several roles, including triggering rebuilding plans under the Fisheries Act, communicating conservation risks to decision makers and the public, and informing management decisions about fisheries. LRPs are biologically based values that are separate from management measures, but can be used to inform management decisions. For example, LRPs can be used to identify operational control points which are points where management actions are triggered within harvest control rules, but are not necessarily operational control points themselves. Within a harvest control role, a conservation goal might be to avoid low biomass levels where serious harm is occurring which can be translated to a measurable objective to avoid spawner abundances lower than an LRP with a high probability (e.g., 95%) over a specified time period.  However, operational control points can be identified to achieve a suite of biological and socioeconomic objectives, beyond those associated with serious harm, usually by a diverse range of managers and stakeholders. In contrast, DFO's Science Sector is responsible for identifying LRPs using biological considerations [@dfoScienceAdvicePrecautionary2021]. 
+LRPs have several roles, including triggering rebuilding plans under the Fisheries Act, communicating conservation risks to decision makers and the public, and informing management decisions about fisheries. LRPs are biologically based values that are separate from management measures, but can be used to inform management decisions. For example, LRPs can be used to identify operational control points which are points where management actions are triggered within harvest control rules, but are not necessarily operational control points themselves. <!--CW: Although I understand this, I still find it confusing. To me, a rebuilding plan is  (has to be) a management action, so what is the difference between the LRP triggering a rebuilding plan and an OCP trigerring other managent action? --> Within a harvest control rule, a conservation goal might be to avoid low biomass levels where serious harm is occurring which can be translated to a measurable objective to avoid spawner abundances lower than an LRP with a high probability (e.g., 95%) over a specified time period.  However, operational control points can be identified to achieve a suite of biological and socioeconomic objectives, beyond those associated with serious harm, usually by a diverse range of managers and stakeholders. In contrast, DFO's Science Sector is responsible for identifying LRPs using <!--based only --> biological considerations [@dfoScienceAdvicePrecautionary2021]. 
 
 
-More generally, LRPs can be used within a Management Procedure Framework (or Management Strategy Evaluation) to identify those procedures that achieve conservation objectives (e.g. 95% probability of staying above LRP over a specified period) among other objectives, without being explicitly specified [@dfoManagementProcedureFramework2021]. This approach includes uncertainties in the biology of the stock, dynamics of the fleet, observation of abundances and associated biological characteristics, and the implementation of management decisions. LRPs are identified within the model to evaluate performance of various management procedures, where LRPs and associated spawning stock values are specific to a set of assumptions (random draws) and are integrated over those uncertainties to derived overall performance.<!--CH: is this too much jargon?--> One advantage of this approach is that a single best underlying model (or LRP) describing the population and fleet dynamics need not be identified; instead management procedures can be evaluated against a suite of plausible underlying models or assumptions. Although increasingly common in marine fisheries, the application of a Management Procedure Frameworks is less common for Pacific salmon where the impact of diverse management levers are often difficult to quantify (e.g., hatcheries and harvest, though see the AHA model documented by @hsrghatcheryscientificreviewgroupColumbiaRiverHatchery2009) and stocks assessmentment have typically not integrated uncertainties in estimates of spawner abundances with reference point derivation (but see @scheuerellIntegratedPopulationModel2021 and @statonIncorporatingDemographicInformation2021). Simulation evaluation of management procedures is widely viewed as a best practice for informing management decisions under uncertainty [@puntEssentialFeaturesNextgeneration2020a]. The roles of LRPs will likely evolve for Pacific salmon over time, and an exhaustive review is beyond the scope of this paper.
+More generally, LRPs can be used within a Management Procedure Framework (or Management Strategy Evaluation) to identify those procedures that achieve conservation objectives (e.g. 95% probability of staying above LRP over a specified period) among other objectives, without being explicitly specified [@dfoManagementProcedureFramework2021]. This approach includes uncertainties in the biology of the stock, dynamics of the fleet, observation of abundances and associated biological characteristics, and the implementation of management decisions. <!--CW: Include sentence from below here: Simulation evaluation of management procedures is widely viewed as a best practice for informing management decisions under uncertainty [@puntEssentialFeaturesNextgeneration2020]. -->
+
+<!-- CW : I think thie sentence can be removed: LRPs are identified within the model to evaluate performance of various management procedures, where LRPs and associated spawning stock values are specific to a set of assumptions (random draws) and are integrated over those uncertainties to derived overall performance.--><!--CH: is this too much jargon?--> One advantage of this approach is that a single best underlying model (or LRP) describing the population and fleet dynamics need not be identified; instead management procedures can be evaluated against a suite of plausible underlying models or assumptions. Although increasingly common in marine fisheries, the application of a Management Procedure Frameworks is less common for Pacific salmon where the impact of diverse management levers <!-- and their interactions --> are often difficult to quantify (e.g., hatcheries and harvest, though see the AHA model documented by @hsrghatcheryscientificreviewgroupColumbiaRiverHatchery2009). <!--CW: In addition, salmon --><!--CW remove: and--> stock assessmentment have typically not integrated uncertainties in estimates of spawner abundances with <!--for?--> reference point derivation (but see @scheuerellIntegratedPopulationModel2021 and @statonIncorporatingDemographicInformation2021). <!--remove: -->Simulation evaluation of management procedures is widely viewed as a best practice for informing management decisions under uncertainty [@puntEssentialFeaturesNextgeneration2020]. The roles of LRPs will likely evolve for Pacific salmon over time, and an exhaustive review is beyond the scope of this paper.
 
 
 <!--CH side note:  DFO's Fisheries Sustainability checklist shows LRPs that usually management operational control points, and not biological LRPs per se-->
@@ -134,7 +145,7 @@ A technical working group was developed to capture expertise and knowledge assoc
 
 In particular, the technical working group informed five components of the work: 
 
-1. Principles for the development of Pacific salmon LRPs (make a new chapter)
+1. Principles for the development of Pacific salmon LRPs (See Section \@ref(principles))
 
 2. A tool kit of candidate LRP methods (See Section \@ref(est-methods)
 
@@ -142,7 +153,7 @@ In particular, the technical working group informed five components of the work:
 
 4. Recommendations on when, and when not to use each candidate LRP method (See Section \@ref(guidelines))
 
-5, Recommendations on future research (See Section \@ref(recommendations))
+5. Recommendations on future research (See Section \@ref(recommendations))
 
 
 <!--CH: Not sure is the R chunk below is necessary? If we remove, do we need to add gpplot2, knitr, bookdown, devtools to index file? Leave for now-->
