--- a/guidelinesWP/02-chap2.Rmd
+++ b/guidelinesWP/02-chap2.Rmd
@@ -9,33 +9,38 @@ Here we outline principles for developing LRPs for Pacific salmon, adapted from 
 
 **Principle 2**. LRPs should be selected based on the best available information for the stock. Criteria for evaluating best scientific information developed for US National Standards may be applicable here for identifying best available information for LRPs [@USCodeFederal2021]. These criteria are: relevance, inclusiveness, objectivity, transparency and openness, timeliness, verification and validation, and peer review [@USCodeFederal2021].  In addition, scientific information should include an evaluation of uncertainties and identify gaps in our understanding or information. When uncertainty arises from multiple LRPs or from various assumptions within a single LRP, these should be acknowledged and considered when providing LRP recommendations. Where the weight-of-evidence supports a set of assumptions or hypotheses associated with one LRP, then this LRP can be recommended. Where evidence is inconclusive, this uncertainty should be integrated into stock assessment and clearly communicated.
 
-Within this principle, it is recognized that science is not static and new findings continually advance our understanding of best available information. In particular, peer-review is necessary to ensure that the quality and credibility of data and methods for LRP development meet the standards of the scientific community. When determining whether to conduct a peer review, the level of novelty and complexity, and any previous reviews should be considered. Although routine updates may not need formal peer review, new LRPS or the application of benchmarks and LRPs to new CUs and SMUs assessments may require peer review.  
+Within this principle, it is recognized that science is not static and new findings continually advance our understanding of best available information. In particular, peer-review is necessary to ensure that the quality and credibility of data and methods for LRP development meet the standards of the scientific community. When determining whether to conduct a peer review, the level of novelty and complexity, and any previous reviews should be considered. Although routine updates may not need formal peer review, new LRPs or the application of benchmarks and LRPs to new CUs and SMUs assessments may require peer review.  
 
 Similarly, best practices, or practices that have been demonstrated to work well can be used to inform reference points, as defined by @sainsburyBestPracticeReference2008. "The ‘best practice’ concept is based on the best practice that has been demonstrated through use, and recognizes that views of what is ‘best’ will continuously improve with experience. Best practice is not an absolute or fixed entity, or a guarantee of adequacy. It is based on experience to date and it is expected to evolve over time." [@sainsburyBestPracticeReference2008]
 
 
-**Principle 3**. LRPs should be operational. They should be feasible to calculate based on data that are available and relevant to the policy context and management of the stock. Data availability varies widely among CUs and SMUs, requiring a variety of approaches for CU and SMU-level assessments. No one method will be operational across all cases. To be operational, LRPs should also be easy to communicate to managers and stakeholders in a way that can be understood and used to inform decisions.
+**Principle 3**. LRPs should be operational. They should be feasible to calculate based on data that are available and relevant to the policy context and management of the stock. Data availability varies widely among CUs and SMUs, requiring a variety of approaches for CU and SMU-level assessments. No one method will be operational across all cases. To be operational, LRPs should also be easy to communicate to managers and stakeholders in a way that can be understood and used to inform decisions. <!-- CW: How is this different from the previous principle, "based on best available information" I suggest we leave this principle with just the relevant to the policy and easy to communicate (although I think that "easy" is debatable, I would not say that Sgen and SPR40 are easy to communicate, I don't think most people understand them, but they can be used to inform decisions) -->
 
 **Principle 4**. LRPs should be reliably estimated. In other words, to the extend possible LRPs should capture underlying true levels of serious harm instead of noise or observation errors. Reliable estimation will depend on the quality and frequency of data collection and the evidence to support underlying relationships and population dynamics used to derive LRPs. Where there is coherence in LRP estimates among analytical methods, this brings additional reliability to the LRP recommendation.
 
 <!--RE: pgh below
 CW: 'statistically integrated' or sequential Bayes? i.e. sampling from posterior. 
-CH: I think the point of Staton et al. 2017 is that for salmon, statistical integration wasn't always essential and the standard sequential approach may be sufficient in many cases (though underestimating uncertainty). I don't think they necessarily recommended Bayes over frequentest. For the watershed-area model, I used TMB, but draw random draws from 95%CI of SREP to get uncertainties in benchmarks. We used TMB to minimize estimation time as we thought we would be running simulation evaluations.  So, I'd prefer not to include recommendation on Bayes vs Freq analyses. However, instead of recommending integrated analyses always,  we could recommend that it be considered--> 
+CH: I think the point of Staton et al. 2017 is that for salmon, statistical integration wasn't always essential and the standard sequential approach may be sufficient in many cases (though underestimating uncertainty). I don't think they necessarily recommended Bayes over frequentest. For the watershed-area model, I used TMB, but draw random draws from 95%CI of SREP to get uncertainties in benchmarks. We used TMB to minimize estimation time as we thought we would be running simulation evaluations.  So, I'd prefer not to include recommendation on Bayes vs Freq analyses. However, instead of recommending integrated analyses always,  we could recommend that it be considered. 
+ÇW: agreed. --> 
 
-Where possible, a statistically integrated approach for estimating LRPs should be considered in order to propagate uncertainties throughout analyses and to be consistent with current best practices in fisheries stock assessments [@puntEssentialFeaturesNextgeneration2020a]. @statonSequentialIntegratedBayesian2017a and @defilippoImprovingShorttermRecruitment2021 provide recent examples of integrated models used for salmon assessments. Both studies show that uncertainty propagation increases realism of model estimates and associated uncertainty. However, @statonSequentialIntegratedBayesian2017a demonstrated that similar point estimates of current status can be achieved by using sequential estimation approaches and the benefits of statistically integrated approaches may not be large enough to warrant an integrated analysis in all cases. 
+Where possible, a statistically integrated approach for estimating LRPs should be considered in order to propagate uncertainties throughout analyses and to be consistent with current best practices in fisheries stock assessments [@puntEssentialFeaturesNextgeneration2020]. @statonSequentialIntegratedBayesian2017a and @defilippoImprovingShorttermRecruitment2021 provide recent examples of integrated models used for salmon assessments. Both studies show that uncertainty propagation increases realism of model estimates and associated uncertainty. However, @statonSequentialIntegratedBayesian2017 demonstrated that similar point estimates of current status can be achieved by using sequential estimation approaches and the benefits of statistically integrated approaches may not be large enough to warrant an integrated analysis in all cases. 
 
 
 <!--CH suggestion: I've added another 2 principles from NHQ's list. Let me know what you think.-->
 
-**Principle 5**. When selecting among multiple methods for determining LRPs, the choice should take into account risk. Candidate methods for LRPs vary in how and the extent to which they account for uncertainty in underlying data, population dynamics (parameters and model structure), and derivation of CU-level statuses. These uncertainties create risks of LRPs providing a misleading threshold of serious harm. All else being equal, methods that do not rely on highly uncertain data or assumptions or that explicitly account for those uncertainties should be preferred. <!--CH: This principle supports use of ppn-based LRPs over aggregate-abundance based LRPs (b/c of uncertain assumptions in LR), with some justification for considering aggregate-abundance based LRPs that are statistically integrated so account of uncertainty in CU benchmarks. I have added to chapter on guidelines  -->
+**Principle 5**. When selecting among multiple methods for determining LRPs, the choice should take into account risk <!-- CW: Risk or uncertainty? I think of risk as associated with FM and objectives. i.e. prob of achieving something. -->. Candidate methods for LRPs vary in how and the extent to which they account for uncertainty in underlying data, population dynamics (parameters and model structure), and derivation of CU-level statuses. These uncertainties create risks of LRPs providing a misleading threshold of serious harm. All else being equal, methods that do not rely on highly uncertain data or assumptions or that explicitly account for those uncertainties should be preferred. <!--CH: This principle supports use of ppn-based LRPs over aggregate-abundance based LRPs (b/c of uncertain assumptions in LR), with some justification for considering aggregate-abundance based LRPs that are statistically integrated so account of uncertainty in CU benchmarks. I have added to chapter on guidelines  -->
 
 
 **Principle 6**. Consider the use of alternative paradigms for developing LRPs. LRP estimates that converge when derived using different approaches, increases support that the methods capture underlying population dynamics despite differing assumptions and use of available data.
 
 
-**Principle 7**.  In addition to principles derived for marine fish species in general (Principles 1-6), for Pacific salmon, LRPs should be consistent with the goals and objectives of the WSP. The WSP framework for defining biological units and assessing their status along biological metrics with lower benchmarks to avoid risks of extinction is consistent with avoiding serious harm to the CU. Above the lower benchmarks (above red status), irreversible or slowly reversible impacts are avoided.  Ignoring CU-level status can result in serial depletion (or loss) of weak component CUs within an SMU, resulting in a possibly misleading indication of serious harm and status. Therefore, to be consistent with the WSP, LRPs should consider status of component CUs.
+**Principle 7**.  In addition to principles derived for marine <!--cw remove: fish --> species in general (Principles 1-6), for Pacific salmon, LRPs should be consistent with the goals and objectives of the WSP. The WSP framework for defining biological units and assessing their status along biological metrics with lower benchmarks to avoid risks of extinction is consistent with avoiding serious harm to the CU. Above the lower benchmarks (above red status), irreversible or slowly reversible impacts are avoided.  Ignoring CU-level status can result in serial depletion (or loss) of weak component CUs within an SMU, resulting in a possibly misleading indication of serious harm and status. Therefore, to be consistent with the WSP, LRPs should consider status of component CUs.
 
-For marine fish species LRPs are typically estimated as a minimum level of spawning biomass that should not be breached (Kronlund et al. 2018), LRPs that consider the distribution of abundances among component CUs and alternative metrics of status within CUs such as trends in abundances and distribution of spawning are considered here to be consistent with previous status assessments under the WSP. Furthermore, DFO's Precautionary Approach Framework identifies additional metrics such as catch rate indices, size and age profiles, and sex ratios that "can and should be considered for use in defining serious harm and guiding decision-making in relation to stock condition” [@dfoFisheryDecisionMakingFramework2009]. Our goal is to provide overall guidelines on LRP development while providing flexibility in application of these methods due to differences in local biological characteristics, data qualities and data quantities, among other factors. We demonstrate the extent to which the candidate LRP methods are aligned with Principles 1-4 from Marentette et al. (in prep.), and Principle 7 for Pacific salmon. We further develop guidelines for implementing these methods (Section \@ref(guidelines)) aligned with Principles 5-6 from Marentette et al. (in prep.).  Alternative LRP methods aligned with the key principles above may be developed in the future to capture a broader range of data availability, quality, and types, and/or dimensions of biological status.
+<!-- CW: I think this next paragraph needs a header, so that we know it is not meant to be part of principle 7. I could not come up with  a good suggestion though.
+## Applying the principles to LRP development
+-->
+
+For marine fish species LRPs are typically estimated as a minimum level of spawning biomass that should not be breached [@kronlundSelectionRoleLimit2018; @marentetteSpecificationPrecautionaryApproach2021], LRPs that consider the distribution of abundances among component CUs and alternative metrics of status within CUs such as trends in abundances and distribution of spawning are considered here to be consistent with previous status assessments under the WSP. Furthermore, DFO's Precautionary Approach Framework identifies additional metrics such as catch rate indices, size and age profiles, and sex ratios that "can and should be considered for use in defining serious harm and guiding decision-making in relation to stock condition” [@dfoFisheryDecisionMakingFramework2009]. Our goal is to provide overall guidelines on LRP development <!--CW: following the principles listed above --> while providing flexibility in application of these methods due to differences in local biological characteristics, data qualities and data quantities, among other factors. We demonstrate the extent to which the candidate LRP methods are aligned with Principles 1-4 from Marentette et al. (in prep.), and Principle 7 for Pacific salmon. We further develop guidelines for implementing these methods (Section \@ref(guidelines)) aligned with Principles 5-6 from Marentette et al. (in prep.).  Alternative LRP methods aligned with the key principles above may be developed in the future to capture a broader range of data availability, quality, and types, and/or dimensions of biological status.
 
 
 
